Update MyStack.java