@@ -1,6 +1,9 @@
 package classes;
 
 public class MyStack<T extends Comparable<T>> {
+    /* Stack operate as last-in-first-out (LIFO) data structures
+
+    */
     private MyLinkedList<T> stack;
 
     public MyStack() {
@@ -8,7 +11,7 @@ public class MyStack<T extends Comparable<T>> {
     }
 
     public void push(T item) {
-        stack.addElement(item);
+        stack.addFirst(item);
     }
 
     public T pop() {
@@ -16,7 +19,7 @@ public class MyStack<T extends Comparable<T>> {
             throw new IllegalStateException("Stack is empty");
         }
         T item = stack.getElement(0);
-        stack.remove(0);
+        stack.removeFirst();
         return item;
     }
 
@@ -24,14 +27,14 @@ public class MyStack<T extends Comparable<T>> {
         if (isEmpty()) {
             throw new IllegalStateException("Stack is empty");
         }
-        return stack.getElement(0);
+        return stack.getFirst(0);
     }
 
     public boolean isEmpty() {
         return stack.getSize() == 0;
     }
 
-    public MyIterator<T> iterator() {//iterating over the elements
+    public MyIterator<T> iterator() {
         return new MyIterator<>(stack);
     }
 }
